# FASTAPI_BACKEND

./: .gitignore  pyproject.toml
app/: main.py
app/config/: settings.py
app/enums/: city.py  region.py
app/models/: weekly_weather.py
app/routers/: weather.py
app/services/: weather.py  weather_abstract.py
app/services/weekly/: location_mapper.py  middle_weather.py  short_weather.py  weather_abstract.py
